--- a/_config.yml
+++ b/_config.yml
@@ -95,4 +95,6 @@ feed:
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:WEAFTeam/weafteam.github.io.git
+  branch: master
